--- a/res/layout/add_meta.xml
+++ b/res/layout/add_meta.xml
@@ -1,63 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="29dp"
-        android:text="Name"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-    <EditText
-        android:id="@+id/nameField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:ems="10" />
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
     <EditText
-        android:id="@+id/descriptionField"
-        android:layout_width="wrap_content"
+        android:id="@+id/editText1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
+        android:text="@string/name_field"
+        android:ems="10" 
+        android:inputType="textPersonName"/>
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_field"
         android:ems="10"
-        android:inputType="textMultiLine" >
+        android:inputType="textMultiLine" />
+    
+    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save_meta_button" android:id="@+id/btnSave"/>
+    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel_meta_button" android:id="@+id/btnCancel"/>
 
-        <requestFocus />
-    </EditText>
-
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/saveButton"
-        android:layout_below="@+id/nameField"
-        android:layout_marginTop="21dp"
-        android:text="Description"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="14dp"
-        android:text="Start" />
-
-</RelativeLayout>
+</LinearLayout>
