--- a/res/layout/add_meta.xml
+++ b/res/layout/add_meta.xml
@@ -8,16 +8,16 @@
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/name_field"
         android:ems="10" 
+        android:hint="@string/name_field"
         android:inputType="textPersonName"/>
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/description_field"
         android:ems="10"
+        android:hint="@string/description_field"
         android:inputType="textMultiLine" />
     
     <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save_meta_button" android:id="@+id/btnSave"/>
