--- a/res/layout/list_meta_item.xml
+++ b/res/layout/list_meta_item.xml
@@ -15,4 +15,22 @@
 			android:layout_marginLeft="12dp">
 			
 		</TextView>
+		
+		<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:id="@+id/text_origin"
+			android:layout_marginLeft="12dp">
+			
+		</TextView>
+		
+		<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:id="@+id/text_destination"
+			android:layout_marginLeft="12dp">
+			
+		</TextView>
+		
+		<fragment 
+		    android:id="@+id/mapFragment"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    class="com.google.android.gms.maps.SupportMapFragment"/>
 </LinearLayout>
