--- a/res/layout/list_meta_item.xml
+++ b/res/layout/list_meta_item.xml
@@ -30,7 +30,7 @@
 		
 		<fragment
 		    android:id="@+id/mapFragment"
-		    android:layout_width="fill_parent"
+		    android:layout_width="match_parent"
 		    android:layout_height="match_parent" 
 		    class="com.google.android.gms.maps.SupportMapFragment"/>
 
