--- a/res/layout/list_meta_item.xml
+++ b/res/layout/list_meta_item.xml
@@ -7,9 +7,8 @@
     <TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/text_name"
 			android:layout_marginLeft="12dp">
-			
 		</TextView>
-		
+			
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/text_description"
 			android:layout_marginLeft="12dp">
@@ -18,24 +17,18 @@
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/text_origin"
 			android:layout_marginLeft="12dp">
+			</TextView>
 			
-		</TextView>
+		
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/text_destination"
-			android:layout_marginLeft="12dp">
-			
-		</TextView>
-		
-<!-- 		<fragment  -->
-<!-- 		  android:id="@+id/mapFragment" -->
-<!-- 		  android:layout_width="match_parent" -->
-<!-- 		  android:layout_height="match_parent" -->
-<!-- 		  android:name="com.google.android.gms.maps.SupportMapFragment"/> -->
-		
-<!-- 		<fragment -->
-<!-- 		    android:id="@+id/mapFragment" -->
-<!-- 		    android:layout_width="match_parent" -->
-<!-- 		    android:layout_height="match_parent"  -->
-<!-- 		    class="com.google.android.gms.maps.SupportMapFragment"/> -->
+			android:layout_marginLeft="12dp"/>
+
+		<Button
+		    android:id="@+id/buttonRoute"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="@string/routeButton"
+		    android:visibility="invisible"/>
 
 </LinearLayout>
